--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <i class="fa-solid fa-magnifying-glass text-white search-icon px-2"></i>
               <a href="login-register.html" target="_blank" class="btn login-btn" > Login</a>
               <div class="menu" id="nav-menu">
-                <i class="fa-solid fa-xmark fs-1 close-menu" id="close-menu" onclick="closeMenu()"></i>
+                <i class="fa-solid fa-xmark fs-1 close-menu" onclick="closeMenu()"></i>
                 <ul>
                   <li><a href="">Home</a></li>
                   <li><a href="">About</a></li>
@@ -49,33 +49,10 @@
                   <li><a href="">Places</a></li>
                 </ul>
               </div>
-              <i class="fa-solid fa-bars text-white text-white  mt-2  menu-icon" id="open-menu" onclick="openMenu()"></i>
+              <i class="fa-solid fa-bars text-white text-white  mt-2  menu-icon" onclick="openMenu()"></i>
         </div>
-       
       </div>
       </nav>
-        <!-- <nav class="navbar py-0">
-          <div class="container nav-line">
-            <a class="navbar-brand text-white fs-1 fw-semibold logo" href="#">Reizen</a>
-            <form class="d-flex justify-content-end px-2 form" role="search">
-              <input class="form-control  search-field" type="search" placeholder="Search tourist place"
-                aria-label="Search">
-              <i class="fa-solid fa-magnifying-glass text-white search-icon px-2"></i>
-              <a href="login-register.html" target="_blank" class="btn login-btn text-white" > Login</a>
-            </form>
-            <div class="menu d-none" id="nav-menu">
-              <i class="fa-solid fa-xmark fs-2 close-menu" id="close-menu"></i>
-              <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Places</a></li>
-              </ul>
-            </div>
-            <i class="fa-solid fa-bars text-white fs-3 text-white  mt-2  menu-icon" id="open-menu"></i>
-          </div>
-        </nav> -->
     </div>
   </header>
     <!-- banner area start-->
@@ -90,93 +67,81 @@
   <!-- main area start here -->
   <main>
     <!-- about area start here -->
-    <section class="about-area pt-80 pb-80">
+    <section class="about-area pt-100 pb-80">
       <div class="container ">
         <!-- section-title -->
         <div class="section-title text-center">
           <h1 class="text-capitalize pb-1">about us</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
-          <div class="row text-center ">
-            <div class="col-md-4 single-about">
-                <div class="card-body p-5 ">
+          <div  class="row row-cols-1 row-cols-md-3 g-4 text-center">
+            <div class="col">
+                   <div class="h-100 p-5 single-about">
                     <div class="card-icon "><i class="fa-solid fa-circle-question  about-icon icon-bg-1"></i></div>
                     <h3>Who We Are</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore
                       cupiditate assumenda corporis doloremque voluptate fuga dolore molestias odio quod.</p>
                     <a href="#" class="btn common-btn mt-4">Read More</a>
-                </div>
+                   </div>
               </div>
-            <div class="col-md-4 single-about">
-                <div class="card-body p-5">
+            <div class="col">
+                 <div class=" h-100 p-5 single-about">
                   <div class="card-icon "><i class="fa-brands fa-think-peaks  about-icon icon-bg-2"></i> </div>
                   <h3>Our Philosopyh</h3>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, dignissimos!
                     Accusantium aliquam dolorem quaerat asperiores, tempora doloremque placeat nemo dolores.</p>
                   <a href="#" class="btn common-btn mt-4">Read More</a>
-                </div>
+                 </div>
             </div>
-            <div class="col card-col">
-              <div class="shadow p-3 mb-5 bg-body rounded text-center h-100">
-                <div class="card-body p-5">
-                  <div class="card-icon"><i class="fa-solid fa-network-wired  about-icon icon-bg-3"></i></div>
-                  <h3 class="card-title py-3">How We Work</h3>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex autem tenetur,
+            <div class="col">
+                  <div class="h-100 p-5 single-about">
+                    <div class="card-icon"><i class="fa-solid fa-network-wired  about-icon icon-bg-3"></i></div>
+                  <h3>How We Work</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex autem tenetur,
                     dolores deleniti doloremque</p>
                   <a href="#" class="btn common-btn mt-4">Read More</a>
-                </div>
-              </div>
+                  </div>
             </div>
           </div>
       </div>
     </section>
     <!-- about area start here -->
     <!-- places area start here -->
-    <section class="pb-80 pt-80">
+    <section class="places-area pb-80 pt-80">
       <div class="container">
         <!-- section-title -->
         <div class="section-title text-center">
           <h1 class="text-capitalize pb-1">places to visit</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5 card-row">
-          <div class="col place-col">
-            <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5 card-row text-center">
+          <div class="col mb-4">
+            <div class=" h-100 places-card">
               <img src="assets/images/places/bisnakhandi.jpg" class="card-img-top card-image" alt="...">
-              <div class="card-body">
-                <h4 class="card-title places-title text-center pb-2">Bisnakhandi</h4>
-                <p class="card-text text-center text-dark"><i
-                    class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
-              </div>
+                <h4 class=" places-title pb-2">Bisnakhandi</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
             </div>
           </div>
-          <div class="col place-col">
-            <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
+          <div class="col mb-4">
+            <div class=" h-100 places-card">
               <img src="assets/images/places/Ratargul-Swamp-Forest.jpg" class="card-img-top card-image" alt="...">
-              <div class="card-body">
-                <h4 class="card-title places-title text-center pb-2">Ratargul Swamp Forest</h4>
-                <p class="card-text text-center text-dark"><i
-                    class="fa-solid fa-location-arrow px-2"></i>Ratargul,Guainghat Sylhet</p>
-              </div>
+                <h4 class=" places-title pb-2">Ratargul Swamp Forest</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Ratargul,Guainghat Sylhet</p>
             </div>
           </div>
-          <div class="col place-col">
-            <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
+          <div class="col mb-4">
+            <div class=" h-100 places-card">
               <img src="assets/images/places/niladri-lake.jpg" class="card-img-top card-image" alt="...">
-              <div class="card-body">
-                <h4 class="card-title places-title text-center pb-2">Niladri</h4>
-                <p class="card-text text-center text-dark"><i
-                    class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
-              </div>
+                <h4 class=" places-title pb-2">Niladri</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
             </div>
           </div>
-          <div class="col place-col">
-            <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
+          <div class="col">
+            <div class=" h-100 places-card">
               <img src="assets/images/places/Tanguar-Haor.jpg" class="card-img-top card-image" alt="...">
               <div class="card-body">
-                <h4 class="card-title places-title text-center pb-2">Tanguar Haor</h4>
-                <p class="card-text text-center text-dark"><i
-                    class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
+                <h4 class=" places-title pb-2">Tanguar Haor</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
               </div>
             </div>
           </div>
@@ -185,7 +150,7 @@
     </section>
     <!-- places area end here -->
     <!-- services area start here -->
-    <section class="pb-80 pt-80">
+    <section class="services-area pb-80 pt-80">
       <div class="container">
         <!-- section-title -->
         <div class="section-title text-center">
@@ -195,47 +160,47 @@
         <div class="text-center card-row">
           <div class="row gx-5 gy-2">
             <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+              <div class="py-5 service-card">
                 <i class="fa-solid fa-car-side px-3"></i>Transport Cost
               </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+              <div class="py-5 service-card">
                 <i class="fa-solid fa-hotel px-3"></i>Hotel
               </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 shadow p-3 mb-5 rounded service-card ">
+              <div class="py-5 service-card ">
                 <i class="fa-solid fa-utensils px-3"></i>Restaurent
               </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+              <div class="py-5 service-card">
                 <i class="fa-solid fa-store px-3"></i>Shopping Mall
               </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+              <div class="py-5 service-card">
                 <i class="fa-solid fa-truck-medical px-3"></i>Emergency Contact
               </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+              <div class="py-5 service-card">
                 <i class="fa-solid fa-shirt px-3"></i>Famous Attire
               </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+              <div class="py-5 service-card">
                 <i class="fa-solid fa-mug-saucer px-3"></i>Traditional Aliment
               </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+              <div class="py-5 service-card">
                 <i class="fa-solid fa-cart-shopping px-3"></i> Grocery Shop
               </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+              <div class="py-5 service-card">
                 <i class="fa-solid fa-location-crosshairs px-3"></i>Tourist Place
               </div>
             </div>
@@ -281,43 +246,39 @@
               voluptatibus provident cum.</p>
             <div class="social-link">
               <a class="footer-icon " href="https://www.facebook.com/">
-                <img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/facebook.png" alt="">
+                <img class="icon-shadow" src="assets/images/icon/facebook.png" alt="">
               </a>
               <a class="footer-icon" href="https://www.instagram.com/">
-                <img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/Instagram.webp" alt="">
+                <img class="icon-shadow" src="assets/images/icon/Instagram.webp" alt="">
               </a>
               <a class="footer-icon" href="https://twitter.com/">
-                <img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/twitter.png" alt="">
+                <img class="icon-shadow" src="assets/images/icon/twitter.png" alt="">
               </a>
               <a class="footer-icon" href="https://bd.linkedin.com/">
-                <img class="p-2 shadow p-3 mb-5 bg-body rounded"src="assets/images/icon/linkdin.png" alt="">
+                <img class="icon-shadow"src="assets/images/icon/linkdin.png" alt="">
               </a>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-3 mb-3 px-5">
             <h4 class="footer-heading ">Quick Links</h4>
             <ul class="nav flex-column footer-items">
-              <li class="nav-item mb-2 mt-3"><a href="#" class="nav-link p-0 text-dark fs-5">Hotels</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Restaurents</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Tourist Places</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Transport Cost</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Shopping Malls</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Grocsey Shops</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Famous Cloth</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Traditional Food</a></li>
+              <li class="mt-3"><a href="#">Hotels</a></li>
+              <li><a href="#">Restaurents</a></li>
+              <li><a href="#">Tourist Places</a></li>
+              <li><a href="#">Transport Cost</a></li>
+              <li><a href="#">Shopping Malls</a></li>
+              <li><a href="#">Grocsey Shops</a></li>
+              <li><a href="#">Famous Cloth</a></li>
+              <li ><a href="#">Traditional Food</a></li>
             </ul>
           </div>
           <div class="col-6  col-md-3 col-lg-4">
             <h4 class="footer-heading ">Our Contact</h4>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2 mt-3 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
-                    class="fa-solid fa-phone px-2"></i>123456789</a></li>
-              <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
-                    class="fa-solid fa-envelope px-2"></i>info@reizen.com</a></li>
-              <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
-                    class="fa-solid fa-map-location-dot px-2"></i>Zindabazar, Sylhet</a></li>
-              <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
-                    class="fa-solid fa-globe px-2"></i>www.reizen.com</a></li>
+            <ul class="nav flex-column contact-info">
+              <li class="mt-3"><a href="#"><i class="fa-solid fa-phone px-2"></i>123456789</a></li>
+              <li><a href="#"><i class="fa-solid fa-envelope px-2"></i>info@reizen.com</a></li>
+              <li><a href="#"><i class="fa-solid fa-map-location-dot px-2"></i>Zindabazar, Sylhet</a></li>
+              <li><a href="#"><i class="fa-solid fa-globe px-2"></i>www.reizen.com</a></li>
             </ul>
             <button class="btn footer-btn">Make An Inqiary!</button>
           </div>
